fix table responsiveness on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -557,6 +557,14 @@ h4 {
     }
 }
 
+@media only screen and (max-width: 420px) {
+    
+    .prices table, .prices th, .prices td {
+        padding: 0;
+        font-size: initial;
+    }
+} 
+
 @media only screen and (max-width: 382px) {
     
     header {
@@ -565,6 +573,14 @@ h4 {
 
     .translations {
         padding: 0;
+    }
+} 
+
+@media only screen and (max-width: 335px) {
+    
+    .prices table, .prices th, .prices td {
+        padding: 0;
+        font-size: 90%;
     }
 } 
 
